--- a/task2.ipynb
+++ b/task2.ipynb
@@ -7,14 +7,12 @@
    "source": [
     "# Task 2: Stemming and Lemmatizing\n",
     "\n",
-    "*by Lukas Dötlinger*\n",
-    "\n",
-    "## Stemming"
+    "*by Lukas Dötlinger*\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "id": "isolated-prairie",
    "metadata": {},
    "outputs": [
@@ -22,26 +20,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Outpur of Porter Stemmer:\n",
-      "['A', 'longer', 'sentenc', 'wa', 'use', 'for', 'do', 'some', 'stem', 'by', 'use', 'multipl', 'stemmer', 'which', 'are', 'implement', 'in', 'nltk', '.']\n",
+      "Porter Stemmer:\n",
+      " ['A', 'longer', 'sentenc', 'wa', 'use', 'for', 'do', 'some', 'stem', 'by', 'use', 'multipl', 'stemmer', 'which', 'are', 'implement', 'in', 'nltk', '.', 'thi', 'did', \"n't\", 'yield', 'an', 'groundbreak', 'result', '.', 'We', 'can', 'conclud', 'that', 'the', 'result', 'are', 'not', 'that', 'differ', 'overal', 'when', 'use', 'differ', 'stemmer', '.', 'dure', 'the', 'test', ',', 'onli', 'some', 'minor', 'differ', 'were', 'found', 'between', 'the', 'approach', '.']\n",
       "\n",
-      "Output of Snowball Stemmer:\n",
-      "['a', 'longer', 'sentenc', 'was', 'use', 'for', 'do', 'some', 'stem', 'by', 'use', 'multipl', 'stemmer', 'which', 'are', 'implement', 'in', 'nltk', '.']\n",
+      "Snowball Stemmer:\n",
+      " ['a', 'longer', 'sentenc', 'was', 'use', 'for', 'do', 'some', 'stem', 'by', 'use', 'multipl', 'stemmer', 'which', 'are', 'implement', 'in', 'nltk', '.', 'this', 'did', \"n't\", 'yield', 'an', 'groundbreak', 'result', '.', 'we', 'can', 'conclud', 'that', 'the', 'result', 'are', 'not', 'that', 'differ', 'overal', 'when', 'use', 'differ', 'stemmer', '.', 'dure', 'the', 'test', ',', 'onli', 'some', 'minor', 'differ', 'were', 'found', 'between', 'the', 'approach', '.']\n",
       "\n",
-      "Difference:\n",
-      "['was', 'a']\n",
+      "Difference when using all words: ['a', 'this', 'we', 'was']\n",
       "\n",
-      "Sentence without stopwords:\n",
-      "A longer sentence used stemming using multiple stemmers implemented nltk.\n",
-      "\n",
-      "Outpur of Porter Stemmer without stopwords:\n",
-      "['A', 'longer', 'sentenc', 'use', 'stem', 'use', 'multipl', 'stemmer', 'implement', 'nltk', '.']\n",
-      "\n",
-      "Output of Snowball Stemmer without stopwords:\n",
-      "['a', 'longer', 'sentenc', 'use', 'stem', 'use', 'multipl', 'stemmer', 'implement', 'nltk', '.']\n",
-      "\n",
-      "Difference:\n",
-      "['a']\n"
+      "Difference when excluding stopwords: ['a', 'this', 'we']\n"
      ]
     }
    ],
@@ -54,44 +41,89 @@
     "stop_words = set(stopwords.words('english'))\n",
     "\n",
     "text = \"\"\"A longer sentence was used for doing some stemming by using multiple stemmers which\n",
-    "    are implemented in nltk.\"\"\"\n",
+    "    are implemented in nltk. This didn't yield an groundbreaking results. We can conclude\n",
+    "    that the results are not that different overall when using different stemmers. During the\n",
+    "    testing, only some minor differences were found between the approaches.\"\"\"\n",
     "words = word_tokenize(text)\n",
-    "filtered_words = [w for w in tokens if not w in stop_words]\n",
+    "filtered_words = [w for w in words if not w in stop_words]\n",
     "\n",
     "ps = PorterStemmer()\n",
-    "ps_result = list(map(lambda w: ps.stem(w), words))\n",
-    "print('Outpur of Porter Stemmer:')\n",
-    "print(ps_result)\n",
-    "\n",
     "ss = SnowballStemmer(\"english\")\n",
+    "\n",
+    "ps_result = list(map(lambda w: ps.stem(w), words))\n",
     "ss_result = list(map(lambda w: ss.stem(w), words))\n",
-    "print('\\nOutput of Snowball Stemmer:')\n",
-    "print(ss_result)\n",
+    "print(\"Porter Stemmer:\\n\", ps_result)\n",
+    "print(\"\\nSnowball Stemmer:\\n\", ss_result)\n",
     "\n",
-    "print('\\nDifference:')\n",
     "diff = list(set(ss_result) - set(ps_result))\n",
-    "print(diff)\n",
-    "\n",
-    "print('\\nSentence without stopwords:')\n",
-    "print(filtered_text)\n",
+    "print('\\nDifference when using all words:', diff)\n",
     "\n",
     "ps_result = list(map(lambda w: ps.stem(w), filtered_words))\n",
-    "print('\\nOutpur of Porter Stemmer without stopwords:')\n",
-    "print(ps_result)\n",
-    "\n",
     "ss_result = list(map(lambda w: ss.stem(w), filtered_words))\n",
-    "print('\\nOutput of Snowball Stemmer without stopwords:')\n",
-    "print(ss_result)\n",
     "\n",
-    "print('\\nDifference:')\n",
     "diff = list(set(ss_result) - set(ps_result))\n",
-    "print(diff)\n"
+    "print('\\nDifference when excluding stopwords:', diff)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dominican-roller",
+   "metadata": {},
+   "source": [
+    "When looking at the computed differences, we cannot observe any major difference between the two stemmers. However the `SnowballStemmer` seems to be a bit more accurate and less aggressive, as the `PorterStemmer` stems `this` to `thi` and `was` to `wa`. We can therefore argue that a *Snowball Stemmer* is better for the given sentences. The removal of stopwords does not change that in any way."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "understood-arthritis",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lemmatized words that changed:\n",
+      "was -> wa\n",
+      "stemmers -> stemmer\n",
+      "results -> result\n",
+      "results -> result\n",
+      "stemmers -> stemmer\n",
+      "differences -> difference\n",
+      "approaches -> approach\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "text = \"\"\"A longer sentence was used for doing some stemming by using multiple stemmers which\n",
+    "    are implemented in nltk. This didn't yield an groundbreaking results. We can conclude\n",
+    "    that the results are not that different overall when using different stemmers. During the\n",
+    "    testing, only some minor differences were found between the approaches.\"\"\"\n",
+    "words = word_tokenize(text)\n",
+    "\n",
+    "wordnet_lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "print('Lemmatized words that changed:')\n",
+    "for w in words:\n",
+    "    if (wordnet_lemmatizer.lemmatize(w) != w):\n",
+    "        print('{} -> {}'.format(w, wordnet_lemmatizer.lemmatize(w)))  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "grave-awareness",
+   "metadata": {},
+   "source": [
+    "Comparing the `WordNetLemmatizer` to the previously used stemmers shows that it's only partially different. The lemmatizer does return `wa` for `was`, but doesn't change `this` like the *Porter Stemmer*."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "guided-documentary",
+   "id": "proved-brown",
    "metadata": {},
    "outputs": [],
    "source": []
