--- a/task2.ipynb
+++ b/task2.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "isolated-prairie",
    "metadata": {},
    "outputs": [
@@ -21,14 +21,63 @@
      "output_type": "stream",
      "text": [
       "Porter Stemmer:\n",
-      " ['A', 'longer', 'sentenc', 'wa', 'use', 'for', 'do', 'some', 'stem', 'by', 'use', 'multipl', 'stemmer', 'which', 'are', 'implement', 'in', 'nltk', '.', 'thi', 'did', \"n't\", 'yield', 'an', 'groundbreak', 'result', '.', 'We', 'can', 'conclud', 'that', 'the', 'result', 'are', 'not', 'that', 'differ', 'overal', 'when', 'use', 'differ', 'stemmer', '.', 'dure', 'the', 'test', ',', 'onli', 'some', 'minor', 'differ', 'were', 'found', 'between', 'the', 'approach', '.']\n",
+      "['sentence -> sentenc',\n",
+      " 'was -> wa',\n",
+      " 'used -> use',\n",
+      " 'doing -> do',\n",
+      " 'stemming -> stem',\n",
+      " 'using -> use',\n",
+      " 'multiple -> multipl',\n",
+      " 'stemmers -> stemmer',\n",
+      " 'implemented -> implement',\n",
+      " 'This -> thi',\n",
+      " 'groundbreaking -> groundbreak',\n",
+      " 'results -> result',\n",
+      " 'conclude -> conclud',\n",
+      " 'results -> result',\n",
+      " 'different -> differ',\n",
+      " 'overall -> overal',\n",
+      " 'using -> use',\n",
+      " 'different -> differ',\n",
+      " 'stemmers -> stemmer',\n",
+      " 'During -> dure',\n",
+      " 'testing -> test',\n",
+      " 'only -> onli',\n",
+      " 'differences -> differ',\n",
+      " 'approaches -> approach']\n",
       "\n",
       "Snowball Stemmer:\n",
-      " ['a', 'longer', 'sentenc', 'was', 'use', 'for', 'do', 'some', 'stem', 'by', 'use', 'multipl', 'stemmer', 'which', 'are', 'implement', 'in', 'nltk', '.', 'this', 'did', \"n't\", 'yield', 'an', 'groundbreak', 'result', '.', 'we', 'can', 'conclud', 'that', 'the', 'result', 'are', 'not', 'that', 'differ', 'overal', 'when', 'use', 'differ', 'stemmer', '.', 'dure', 'the', 'test', ',', 'onli', 'some', 'minor', 'differ', 'were', 'found', 'between', 'the', 'approach', '.']\n",
+      "['A -> a',\n",
+      " 'sentence -> sentenc',\n",
+      " 'used -> use',\n",
+      " 'doing -> do',\n",
+      " 'stemming -> stem',\n",
+      " 'using -> use',\n",
+      " 'multiple -> multipl',\n",
+      " 'stemmers -> stemmer',\n",
+      " 'implemented -> implement',\n",
+      " 'This -> this',\n",
+      " 'groundbreaking -> groundbreak',\n",
+      " 'results -> result',\n",
+      " 'We -> we',\n",
+      " 'conclude -> conclud',\n",
+      " 'results -> result',\n",
+      " 'different -> differ',\n",
+      " 'overall -> overal',\n",
+      " 'using -> use',\n",
+      " 'different -> differ',\n",
+      " 'stemmers -> stemmer',\n",
+      " 'During -> dure',\n",
+      " 'testing -> test',\n",
+      " 'only -> onli',\n",
+      " 'differences -> differ',\n",
+      " 'approaches -> approach']\n",
       "\n",
-      "Difference when using all words: ['a', 'this', 'we', 'was']\n",
+      "Intersection when using all words:\n",
+      "['This -> this', 'was -> wa', 'This -> thi', 'We -> we', 'A -> a']\n",
       "\n",
-      "Difference when excluding stopwords: ['a', 'this', 'we']\n"
+      "Intersection when excluding stopwords:\n",
+      "['This -> this', 'This -> thi', 'We -> we', 'A -> a']\n"
      ]
     }
    ],
@@ -48,21 +97,26 @@
     "filtered_words = [w for w in words if not w in stop_words]\n",
     "\n",
     "ps = PorterStemmer()\n",
-    "ss = SnowballStemmer(\"english\")\n",
+    "ss = SnowballStemmer('english')\n",
     "\n",
-    "ps_result = list(map(lambda w: ps.stem(w), words))\n",
-    "ss_result = list(map(lambda w: ss.stem(w), words))\n",
-    "print(\"Porter Stemmer:\\n\", ps_result)\n",
-    "print(\"\\nSnowball Stemmer:\\n\", ss_result)\n",
+    "# Stems words and returns the transformation as string if stemmer changes word.\n",
+    "stem_words = lambda words, s: ['{} -> {}'.format(w, s.stem(w)) for w in words if w != s.stem(w)]\n",
     "\n",
-    "diff = list(set(ss_result) - set(ps_result))\n",
-    "print('\\nDifference when using all words:', diff)\n",
+    "ps_result = stem_words(words, ps)\n",
+    "ss_result = stem_words(words, ss)\n",
+    "print('Porter Stemmer:')\n",
+    "pprint(ps_result)\n",
+    "print('\\nSnowball Stemmer:')\n",
+    "pprint(ss_result)\n",
     "\n",
-    "ps_result = list(map(lambda w: ps.stem(w), filtered_words))\n",
-    "ss_result = list(map(lambda w: ss.stem(w), filtered_words))\n",
+    "print('\\nIntersection when using all words:')\n",
+    "pprint(list(set(ss_result) ^ set(ps_result)))\n",
     "\n",
-    "diff = list(set(ss_result) - set(ps_result))\n",
-    "print('\\nDifference when excluding stopwords:', diff)"
+    "ps_result = stem_words(filtered_words, ps)\n",
+    "ss_result = stem_words(filtered_words, ss)\n",
+    "\n",
+    "print('\\nIntersection when excluding stopwords:')\n",
+    "pprint(list(set(ss_result) ^ set(ps_result)))"
    ]
   },
   {
@@ -75,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "understood-arthritis",
    "metadata": {},
    "outputs": [
@@ -117,13 +171,62 @@
    "id": "grave-awareness",
    "metadata": {},
    "source": [
-    "Comparing the `WordNetLemmatizer` to the previously used stemmers shows that it's only partially different. The lemmatizer does return `wa` for `was`, but doesn't change `this` like the *Porter Stemmer*."
+    "Comparing the `WordNetLemmatizer` to the previously used stemmers shows that it's only partially different when looking at the intersection of their results. Overall we can observe that the lemmatizer transforms way less words in total. This is due to the lemmatizer beeing a more intelligent approach that laverages a dictionary to find the proper form of a word."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "proved-brown",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['lange -> lang',\n",
+      " 'zusammenhangslos -> zusammenhangslo',\n",
+      " 'oftmals -> oftmal',\n",
+      " 'schlechterer -> schlechter',\n",
+      " 'als -> al',\n",
+      " 'andere -> ander',\n",
+      " 'werde -> werd',\n",
+      " 'andere -> ander',\n",
+      " 'Texte -> text',\n",
+      " 'besonders -> besond',\n",
+      " 'diese -> dies',\n",
+      " 'als -> al',\n",
+      " 'etwas -> etwa',\n",
+      " 'Texte -> text']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "from nltk.stem import SnowballStemmer\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "# https://designers-inn.de/blindtexte/\n",
+    "text = \"\"\"Hallo. Ich bin ein kleiner Blindtext. Und zwar schon so lange ich denken kann.\n",
+    "    Es war nicht leicht zu verstehen, was es bedeutet, ein blinder Text zu sein: Man\n",
+    "    ergibt keinen Sinn. Wirklich keinen Sinn. Man wird zusammenhangslos eingeschoben\n",
+    "    und rumgedreht – und oftmals gar nicht erst gelesen. Aber bin ich allein deshalb ein\n",
+    "    schlechterer Text als andere? Na gut, ich werde nie in den Bestsellerlisten stehen.\n",
+    "    Aber andere Texte schaffen das auch nicht. Und darum stört es mich nicht besonders\n",
+    "    blind zu sein. Und sollten Sie diese Zeilen noch immer lesen, so habe ich als\n",
+    "    kleiner Blindtext etwas geschafft, wovon all die richtigen und wichtigen Texte meist\n",
+    "    nur träumen.\"\"\"\n",
+    "words = word_tokenize(text)\n",
+    "ss = SnowballStemmer('english')\n",
+    "\n",
+    "# Outputs words which are different after stemming (not case sensitive)\n",
+    "pprint(['{} -> {}'.format(w, ss.stem(w)) for w in words if w.lower() != ss.stem(w)])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "proved-brown",
+   "id": "aerial-terminal",
    "metadata": {},
    "outputs": [],
    "source": []
