--- a/task4.ipynb
+++ b/task4.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {
     "tags": []
    },
@@ -47,28 +47,30 @@
     "from nltk.util import trigrams\n",
     "from nltk.probability import ConditionalFreqDist\n",
     "\n",
+    "filter_words = lambda words: [ word.lower() for word in words if word.isalpha() ]\n",
+    "\n",
     "def trigram_dist(sentences):\n",
     "    dist = ConditionalFreqDist()\n",
     "    for s in [ word_tokenize(s) for s in sentences ]:\n",
-    "        for w1, w2, w3 in trigrams([ w.lower() for w in s if w.isalpha() ]):\n",
+    "        for w1, w2, w3 in trigrams(filter_words(s)):\n",
     "            dist[(w1, w2)][w3] += 1\n",
     "    return dist\n",
     "\n",
-    "dist_au = create_trigram(open('res/training_data_AU.txt', encoding='utf8').readlines())\n",
-    "dist_gb = create_trigram(open('res/training_data_GB.txt', encoding='utf8').readlines())\n",
-    "dist_us = create_trigram(open('res/training_data_US.txt', encoding='utf8').readlines())\n"
+    "dist_au = trigram_dist(open('res/training_data_AU.txt', encoding='utf8').readlines())\n",
+    "dist_gb = trigram_dist(open('res/training_data_GB.txt', encoding='utf8').readlines())\n",
+    "dist_us = trigram_dist(open('res/training_data_US.txt', encoding='utf8').readlines())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "in the best of the most important thing is to be a\nin the reflective process there are many other factors such as the\nin the land of cold rain and the other hand the bible\n"
+      "in the price of their own right and we are looking for\nin the past years the old testament access to the right to\nin the reproductive health care system has been a small group of\n"
      ]
     }
    ],
@@ -89,10 +91,49 @@
     "                s.append(w)\n",
     "                break\n",
     "    print (' '.join([ w for w in s ]))\n",
-    " \n",
+    "\n",
     "generate_sentence(dist_gb, [\"in\", \"the\"])\n",
     "generate_sentence(dist_gb, [\"in\", \"the\"])\n",
     "generate_sentence(dist_gb, [\"in\", \"the\"])\n"
+   ]
+  },
+  {
+   "source": [
+    "## Perplexity\n",
+    "\n",
+    "... describes how well a language model predicts a sample.\n",
+    "\n",
+    "The perplexity $PP$ of a sentence $s$ is calculated by: $PP(s) = P(s_1, s_2, ..., s_N)^{-\\frac{1}{N}}$"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "PP(s1) = 1.847193582450255\nPP(s2) = 1.9756969844841543\nPP(s3) = 1.0\nPP(s4) = 1.340080354175094\nPP(s5) = 2.064831394559741\nPP(s6) = 1.2353487360725695\nPP(s7) = 1.7066697411154184\nPP(s8) = 1.6756999954002187\nPP(s9) = 1.4100231600298865\n"
+     ]
+    }
+   ],
+   "source": [
+    "from math import pow, prod\n",
+    "\n",
+    "def pp(sentence, dist):\n",
+    "    p_words = [ dist[sentence[i-2], sentence[i-1]].freq(w) for (i, w) in enumerate(sentence) ]\n",
+    "    p_s = prod([ p_w for p_w in p_words if p_w != 0 ])\n",
+    "    return pow(p_s, -float(1/len(sentence)))\n",
+    "\n",
+    "tests = [ filter_words(word_tokenize(s)) for s in open('res/test_data.txt', encoding='utf8').readlines() ]\n",
+    "for i, s in enumerate(tests, start=1):\n",
+    "    if s[0] == 'au': print('PP(s{}) = {}'.format(i, pp(s[1:], dist_au)))\n",
+    "    if s[0] == 'gb': print('PP(s{}) = {}'.format(i, pp(s[1:], dist_gb)))\n",
+    "    if s[0] == 'us': print('PP(s{}) = {}'.format(i, pp(s[1:], dist_us)))\n"
    ]
   }
  ]
