Use letters for language model.

--- a/task4.ipynb
+++ b/task4.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {
     "tags": []
    },
@@ -47,13 +47,14 @@
     "from nltk.util import trigrams\n",
     "from nltk.probability import ConditionalFreqDist\n",
     "\n",
-    "filter_words = lambda words: [ word.lower() for word in words if word.isalpha() ]\n",
+    "filter_text = lambda text: [ l.lower() for l in text if l.isalpha() or l == ' ' ]\n",
     "\n",
     "def trigram_dist(sentences):\n",
     "    dist = ConditionalFreqDist()\n",
-    "    for s in [ word_tokenize(s) for s in sentences ]:\n",
-    "        for w1, w2, w3 in trigrams(filter_words(s)):\n",
+    "    for s in sentences:\n",
+    "        for w1, w2, w3 in trigrams([ l if l != ' ' else '_' for l in filter_text(s) ]):\n",
     "            dist[(w1, w2)][w3] += 1\n",
+    "            dist[None][w1+w2] += 1\n",
     "    return dist\n",
     "\n",
     "dist_au = trigram_dist(open('res/training_data_AU.txt', encoding='utf8').readlines())\n",
@@ -63,38 +64,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "in the price of their own right and we are looking for\nin the past years the old testament access to the right to\nin the reproductive health care system has been a small group of\n"
+      "AU: cents planice of rchmorisave howner of an throvesear twe arly theirst fludyzoo  gurindeste beire elland not spectle cararc\nAU: ike of ofes irst libioulatcause notion the does  ine sed of pea mend ander only and  cred rounde bet wity  wersensters abi\nAU:  is  onsionst tooked re lare be te llin twe al cholively wasigeopernme ustrucamly al count hameastrent rand twer thow fain\nGB:  rearsubt the in monely ty ing the midess  sphow of to thmationsue realson in toodul sup orking thato dres  thippof that f\nGB: ommew whis the uk  in stry by bgret yearsee ands com fore peritheres a st ithe liker  sou exce ved all   thody wo hifeepol\nGB: forniddly call yed lesters an  bivelly us dows  the swars lp yeam farly  as of a  hissailly so non the is s fis of thavedi\nUS: robjecirtbrest  eigina pres nt wourien virstude docturs upord thers on atel depirs nown is  thiman to a jusis morpeoppreac\nUS: ght nothe hatians there dat whout cossinse mostv buits noth ped maz ithativerm  in isk   moveres audic  my plimpam ir a se\nUS: t  the lier othin ethers grapsoment of they  nown a stal or at rat as doe turilly s a upeons nowwimand se phy ma  for abot\n"
      ]
     }
    ],
    "source": [
-    "#for word in dist['let', 'me']:\n",
-    "#    print(\"Cond. frequency of\", word, dist['let', 'me'].freq(word))\n",
-    "import random\n",
+    "from numpy import random\n",
     "\n",
-    "def generate_sentence(dist, words):\n",
-    "    r = random.random()\n",
-    "    accumulator = .0\n",
+    "def random_start(dist):\n",
+    "    ls = list(dist[None].keys())\n",
+    "    fs = [ dist[None].freq(l) for l in ls ]\n",
+    "    return random.choice(ls, p = fs)\n",
     "\n",
-    "    s = words\n",
-    "    for i in range(10):\n",
-    "        for w, f in [ (w, dist_gb[tuple(s[-2:])].freq(w)) for w in dist_gb[tuple(s[-2:])] ]:\n",
-    "            accumulator += f\n",
-    "            if accumulator >= r:\n",
-    "                s.append(w)\n",
-    "                break\n",
-    "    print (' '.join([ w for w in s ]))\n",
+    "def generate_sentence(dist):\n",
+    "    s = random_start(dist)\n",
+    "    for i in range(120):\n",
+    "        ls, fs = zip(*[ (l, dist[tuple(s[-2:])].freq(l)) for l in dist[tuple(s[-2:])] if l != None ])\n",
+    "        s += (random.choice(ls, p = fs))\n",
+    "    return ''.join([ l if l != '_' else ' ' for l in s ])\n",
     "\n",
-    "generate_sentence(dist_gb, [\"in\", \"the\"])\n",
-    "generate_sentence(dist_gb, [\"in\", \"the\"])\n",
-    "generate_sentence(dist_gb, [\"in\", \"the\"])\n"
+    "for i in range(3): print('AU: {}'.format(generate_sentence(dist_au)))\n",
+    "for i in range(3): print('GB: {}'.format(generate_sentence(dist_gb)))\n",
+    "for i in range(3): print('US: {}'.format(generate_sentence(dist_us)))\n"
    ]
   },
   {
@@ -110,30 +108,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "PP(s1) = 1.847193582450255\nPP(s2) = 1.9756969844841543\nPP(s3) = 1.0\nPP(s4) = 1.340080354175094\nPP(s5) = 2.064831394559741\nPP(s6) = 1.2353487360725695\nPP(s7) = 1.7066697411154184\nPP(s8) = 1.6756999954002187\nPP(s9) = 1.4100231600298865\n"
+      "PP(s1) = 8.429452955059682\nPP(s2) = 8.786606517176915\nPP(s3) = 10.95553491479648\nPP(s4) = 7.367205917945225\nPP(s5) = 8.192422629017084\nPP(s6) = 7.696596342484692\nPP(s7) = 7.0948484561348355\nPP(s8) = 7.847986474091194\nPP(s9) = 7.001679567600132\n"
      ]
     }
    ],
    "source": [
     "from math import pow, prod\n",
     "\n",
-    "def pp(sentence, dist):\n",
-    "    p_words = [ dist[sentence[i-2], sentence[i-1]].freq(w) for (i, w) in enumerate(sentence) ]\n",
-    "    p_s = prod([ p_w for p_w in p_words if p_w != 0 ])\n",
-    "    return pow(p_s, -float(1/len(sentence)))\n",
+    "tokenize_sentence = lambda s: [ l if l != ' ' else '_' for l in filter_text(s) ]\n",
     "\n",
-    "tests = [ filter_words(word_tokenize(s)) for s in open('res/test_data.txt', encoding='utf8').readlines() ]\n",
+    "def pp(sentence, dist):\n",
+    "    p_letters = [ dist[sentence[i-2], sentence[i-1]].freq(l) for (i, l) in enumerate(sentence) ]\n",
+    "    p_l = prod([ p_l for p_l in p_letters if p_l != 0 ])\n",
+    "    return pow(p_l, -float(1/len(sentence)))\n",
+    "\n",
+    "tests = [ tokenize_sentence(s) for s in open('res/test_data.txt', encoding='utf8').readlines() ]\n",
     "for i, s in enumerate(tests, start=1):\n",
-    "    if s[0] == 'au': print('PP(s{}) = {}'.format(i, pp(s[1:], dist_au)))\n",
-    "    if s[0] == 'gb': print('PP(s{}) = {}'.format(i, pp(s[1:], dist_gb)))\n",
-    "    if s[0] == 'us': print('PP(s{}) = {}'.format(i, pp(s[1:], dist_us)))\n"
+    "    if s[0] == 'a': print('PP(s{}) = {}'.format(i, pp(s[1:], dist_au)))\n",
+    "    if s[0] == 'g': print('PP(s{}) = {}'.format(i, pp(s[1:], dist_gb)))\n",
+    "    if s[0] == 'u': print('PP(s{}) = {}'.format(i, pp(s[1:], dist_us)))\n"
    ]
   }
  ]
