--- a/task4.ipynb
+++ b/task4.ipynb
@@ -108,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "PP(s1) = 8.429452955059682\nPP(s2) = 8.786606517176915\nPP(s3) = 10.95553491479648\nPP(s4) = 7.367205917945225\nPP(s5) = 8.192422629017084\nPP(s6) = 7.696596342484692\nPP(s7) = 7.0948484561348355\nPP(s8) = 7.847986474091194\nPP(s9) = 7.001679567600132\n"
+      "PP(s1) = 8.095632642942906\nPP(s2) = 8.358662203897032\nPP(s3) = 9.21224434132801\nPP(s4) = 6.756150922349991\nPP(s5) = 8.003755711132927\nPP(s6) = 7.5866279647959844\nPP(s7) = 6.850700172538111\nPP(s8) = 7.511744549869903\nPP(s9) = 6.7357828494599845\n"
      ]
     }
    ],
@@ -125,15 +125,15 @@
     "tokenize_sentence = lambda s: [ l if l != ' ' else '_' for l in filter_text(s) ]\n",
     "\n",
     "def pp(sentence, dist):\n",
-    "    p_letters = [ dist[sentence[i-2], sentence[i-1]].freq(l) for (i, l) in enumerate(sentence) ]\n",
+    "    p_letters = [ dist[sentence[i-2], sentence[i-1]].freq(l) for (i, l) in enumerate(sentence) if i > 1 ]\n",
     "    p_l = prod([ p_l for p_l in p_letters if p_l != 0 ])\n",
-    "    return pow(p_l, -float(1/len(sentence)))\n",
+    "    return p_l ** -(1/len(sentence))\n",
     "\n",
     "tests = [ tokenize_sentence(s) for s in open('res/test_data.txt', encoding='utf8').readlines() ]\n",
     "for i, s in enumerate(tests, start=1):\n",
-    "    if s[0] == 'a': print('PP(s{}) = {}'.format(i, pp(s[1:], dist_au)))\n",
-    "    if s[0] == 'g': print('PP(s{}) = {}'.format(i, pp(s[1:], dist_gb)))\n",
-    "    if s[0] == 'u': print('PP(s{}) = {}'.format(i, pp(s[1:], dist_us)))\n"
+    "    if s[0] == 'a': print('PP(s{}) = {}'.format(i, pp(s[3:], dist_au)))\n",
+    "    if s[0] == 'g': print('PP(s{}) = {}'.format(i, pp(s[3:], dist_gb)))\n",
+    "    if s[0] == 'u': print('PP(s{}) = {}'.format(i, pp(s[3:], dist_us)))\n"
    ]
   }
  ]
