Add first part of task 6.

--- a/task5.ipynb
+++ b/task5.ipynb
@@ -253,7 +253,7 @@
     "    print(f'Precision: {precision}')\n",
     "    print(f'Recall: {recall}')\n",
     "    print(f'F-measure: {(2 * precision * recall) / (precision + recall)}')\n",
-    "    print(f'Accuracy: {( + tn) / (tp + fp + tn + fn)}')\n",
+    "    print(f'Accuracy: {(tp + tn) / (tp + fp + tn + fn)}')\n",
     "    print('___________________________________________')"
    ]
   }
