--- a/task6.ipynb
+++ b/task6.ipynb
@@ -196,14 +196,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Precision: 0.7425658453695837\nRecall: 0.874\nF1: 0.802939825447864\nAccuracy: 0.7855\n"
+      "Precision: 0.7208192573056208\nRecall: 0.901225\nF1: 0.8009896551704984\nAccuracy: 0.776085625\n"
      ]
     }
    ],
@@ -214,10 +214,17 @@
     "def combined(tweets):\n",
     "    return list(map(clean, tweets))\n",
     "\n",
-    "clean_negative = lemmatized(negative_tweets)\n",
-    "clean_positive = lemmatized(positive_tweets)\n",
+    "clean_negative = combined(negative_tweets)\n",
+    "clean_positive = combined(positive_tweets)\n",
     "compute_results(clean_negative, clean_positive)"
    ]
+  },
+  {
+   "source": [
+    "As we can see from the results, nothing really seems to improve the classification. We can conclude that the classifier is already well trained for the tweets in the test set. This is somewhat expected since it was trained on social media texts. When combining all approaches we even get the worst result of all. However, precision is only lowered for about three percent, which shows that the changes don't really have a high impact."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
