--- a/task7.ipynb
+++ b/task7.ipynb
@@ -10,17 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2-final"
+   "version": "3.9.2"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.2 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "5a97e18a4f2007a0ed203951ee52f858d34fb763d7690c774d14a9de792036d3"
-    }
-   }
+   "name": "python392jvsc74a57bd05e201434fc87e731f1f08451237b3d562d890a8afaf10be68eaaa2bf1fd600d6",
+   "display_name": "Python 3.9.2 64-bit"
   }
  },
  "nbformat": 4,
@@ -37,28 +32,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Lowering took 0.0950 seconds\n",
+      "Tokenizing took 58.0212 seconds\n",
+      "Filtering took 3.3629 seconds\n",
+      "Joining to string took 0.2256 seconds\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   type                                              posts\n",
+       "0  INFJ  moments https sportscenter plays https been mo...\n",
+       "1  ENTP  finding lack these posts very boring same posi...\n",
+       "2  INTP  https course which know that blessing being ab...\n",
+       "3  INTJ  enjoyed conversation other esoteric gabbing ab...\n",
+       "4  ENTJ  another silly misconception that approaching l..."
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>type</th>\n      <th>posts</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>INFJ</td>\n      <td>moments https sportscenter plays https been mo...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>ENTP</td>\n      <td>finding lack these posts very boring same posi...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>INTP</td>\n      <td>https course which know that blessing being ab...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>INTJ</td>\n      <td>enjoyed conversation other esoteric gabbing ab...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>ENTJ</td>\n      <td>another silly misconception that approaching l...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import time\n",
+    "\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "import sklearn\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score, f1_score\n",
+    "\n",
+    "\n",
+    "data = pd.read_csv('res/mbti_1.csv')\n",
+    "\n",
+    "def filter_text(df):\n",
+    "    start_time = time.perf_counter()\n",
+    "\n",
+    "    labels = ['INFP' ,'INFJ', 'INTP', 'INTJ', 'ENTP', 'ENFP', 'ISTP' ,'ISFP' ,'ENTJ', 'ISTJ','ENFJ', 'ISFJ' ,'ESTP', 'ESFP' ,'ESFJ' ,'ESTJ']\n",
+    "    lower_labels = [ l.lower() for l in labels ]\n",
+    "\n",
+    "    # Convert posts to lowercase.\n",
+    "    df['posts'] = df['posts'].apply(lambda s: s.lower())\n",
+    "\n",
+    "    stop_time = time.perf_counter()\n",
+    "    print(f\"Lowering took {stop_time - start_time:0.4f} seconds\")\n",
+    "    start_time = stop_time\n",
+    "\n",
+    "    # Word tokenize posts.\n",
+    "    df['posts'] = df['posts'].apply(lambda s: word_tokenize(s))\n",
+    "\n",
+    "    stop_time = time.perf_counter()\n",
+    "    print(f\"Tokenizing took {stop_time - start_time:0.4f} seconds\")\n",
+    "    start_time = stop_time\n",
+    "\n",
+    "    # Remove non-alpha words and labels from posts.\n",
+    "    df['posts'] = df['posts'].apply(lambda s: [ w for w in s if w.isalpha() and w not in lower_labels ])\n",
+    "    #Remove very short or long words\n",
+    "    df['posts'] = df['posts'].apply(lambda s: [ w for w in s if len(w) > 3 ]) \n",
+    "    df['posts'] = df['posts'].apply(lambda s: [ w for w in s if len(w) < 30 ])\n",
+    "\n",
+    "    stop_time = time.perf_counter()\n",
+    "    print(f\"Filtering took {stop_time - start_time:0.4f} seconds\")\n",
+    "    start_time = stop_time\n",
+    "\n",
+    "    # Join words to one string.\n",
+    "    df['posts'] = df['posts'].apply(lambda s: ' '.join(s))\n",
+    "\n",
+    "    stop_time = time.perf_counter()\n",
+    "    print(f\"Joining to string took {stop_time - start_time:0.4f} seconds\")\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "new_df = filter_text(data)\n",
+    "new_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "\"'http://www.youtube.com/watch?v=qsXHcwe3krw|||http://41.media.tumblr.com/tumblr_lfouy03PMA1qa1rooo1_500.jpg|||enfp and intj moments  https://www.youtube.com/watch?v=iz7lE1g4XM4  sportscenter not top ten plays  https://www.youtube.com/watch?v=uCdfze1etec  pranks|||What has been the most life-changing experience in your life?|||http://www.youtube.com/watch?v=vXZeYwwRDw8   http://www.youtube.com/watch?v=u8ejam5DP3E  On repeat for most of today.|||May the PerC Experience immerse you.|||The last thing my INFJ friend posted on his facebook before committing suicide the next day. Rest in peace~   http://vimeo.com/22842206|||Hello ENFJ7. Sorry to hear of your distress. It's only natural for a relationship to not be perfection all the time in every moment of existence. Try to figure the hard times as times of growth, as...|||84389  84390  http://wallpaperpassion.com/upload/23700/friendship-boy-and-girl-wallpaper.jpg  http://assets.dornob.com/wp-content/uploads/2010/04/round-home-design.jpg ...|||Welcome and stuff.|||http://playeressence.com/wp-content/uploads/2013/08/RED-red-the-pokemon-master-32560474-450-338.jpg  Game. Set. Match.|||Prozac, wellbrutin, at least thirty minutes of moving your legs (and I don't mean moving them while sitting in your same desk chair), weed in moderation (maybe try edibles as a healthier alternative...|||Basically come up with three items you've determined that each type (or whichever types you want to do) would more than likely use, given each types' cognitive functions and whatnot, when left by...|||All things in moderation.  Sims is indeed a video game, and a good one at that. Note: a good one at that is somewhat subjective in that I am not completely promoting the death of any given Sim...|||Dear ENFP:  What were your favorite video games growing up and what are your now, current favorite video games? :cool:|||https://www.youtube.com/watch?v=QyPqT8umzmY|||It appears to be too late. :sad:|||There's someone out there for everyone.|||Wait... I thought confidence was a good thing.|||I just cherish the time of solitude b/c i revel within my inner world more whereas most other time i'd be workin... just enjoy the me time while you can. Don't worry, people will always be around to...|||Yo entp ladies... if you're into a complimentary personality,well, hey.|||... when your main social outlet is xbox live conversations and even then you verbally fatigue quickly.|||http://www.youtube.com/watch?v=gDhy7rdfm14  I really dig the part from 1:46 to 2:50|||http://www.youtube.com/watch?v=msqXffgh7b8|||Banned because this thread requires it of me.|||Get high in backyard, roast and eat marshmellows in backyard while conversing over something intellectual, followed by massages and kisses.|||http://www.youtube.com/watch?v=Mw7eoU3BMbE|||http://www.youtube.com/watch?v=4V2uYORhQOk|||http://www.youtube.com/watch?v=SlVmgFQQ0TI|||Banned for too many b's in that sentence. How could you! Think of the B!|||Banned for watching movies in the corner with the dunces.|||Banned because Health class clearly taught you nothing about peer pressure.|||Banned for a whole host of reasons!|||http://www.youtube.com/watch?v=IRcrv41hgz4|||1) Two baby deer on left and right munching on a beetle in the middle.  2) Using their own blood, two cavemen diary today's latest happenings on their designated cave diary wall.  3) I see it as...|||a pokemon world  an infj society  everyone becomes an optimist|||49142|||http://www.youtube.com/watch?v=ZRCEq_JFeFM|||http://discovermagazine.com/2012/jul-aug/20-things-you-didnt-know-about-deserts/desert.jpg|||http://oyster.ignimgs.com/mediawiki/apis.ign.com/pokemon-silver-version/d/dd/Ditto.gif|||http://www.serebii.net/potw-dp/Scizor.jpg|||Not all artists are artists because they draw. It's the idea that counts in forming something of your own... like a signature.|||Welcome to the robot ranks, person who downed my self-esteem cuz I'm not an avid signature artist like herself. :proud:|||Banned for taking all the room under my bed. Ya gotta learn to share with the roaches.|||http://www.youtube.com/watch?v=w8IgImn57aQ|||Banned for being too much of a thundering, grumbling kind of storm... yep.|||Ahh... old high school music I haven't heard in ages.   http://www.youtube.com/watch?v=dcCRUPCdB1w|||I failed a public speaking class a few years ago and I've sort of learned what I could do better were I to be in that position again. A big part of my failure was just overloading myself with too...|||I like this person's mentality. He's a confirmed INTJ by the way. http://www.youtube.com/watch?v=hGKLI-GEc6M|||Move to the Denver area and start a new life for myself.'\""
+       "(8675, 84013)"
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 33
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from nltk.sentiment import SentimentIntensityAnalyzer\n",
+    "encoder = LabelEncoder()\n",
+    "new_df['type of encoding'] = encoder.fit_transform(new_df['type'])\n",
+    "target = new_df['type of encoding']\n",
     "\n",
-    "df = pd.read_csv('res/mbti_1.csv')\n",
+    "# Filter stopwords from nltk in vectorization step.\n",
+    "vectorizer = CountVectorizer(stop_words='english') \n",
+    "train = vectorizer.fit_transform(new_df['posts'])\n",
     "\n",
-    "data = df.groupby('type')['posts'].apply(list).to_dict()\n",
-    "len(data['ISTP'])"
+    "train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "Accuracy: 45.16%\n",
+      "F1 (macro): 0.24%\n",
+      "F1 (micro): 0.45%\n",
+      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "Accuracy: 46.31%\n",
+      "F1 (macro): 0.27%\n",
+      "F1 (micro): 0.46%\n",
+      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "Accuracy: 43.78%\n",
+      "F1 (macro): 0.29%\n",
+      "F1 (micro): 0.44%\n",
+      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "Accuracy: 46.66%\n",
+      "F1 (macro): 0.27%\n",
+      "F1 (micro): 0.47%\n",
+      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "Accuracy: 43.66%\n",
+      "F1 (macro): 0.28%\n",
+      "F1 (micro): 0.44%\n",
+      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "Accuracy: 45.91%\n",
+      "F1 (macro): 0.31%\n",
+      "F1 (micro): 0.46%\n",
+      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "Accuracy: 44.87%\n",
+      "F1 (macro): 0.31%\n",
+      "F1 (micro): 0.45%\n",
+      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "Accuracy: 46.02%\n",
+      "F1 (macro): 0.31%\n",
+      "F1 (micro): 0.46%\n",
+      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "Accuracy: 46.94%\n",
+      "F1 (macro): 0.31%\n",
+      "F1 (micro): 0.47%\n",
+      "Accuracy: 43.14%\n",
+      "F1 (macro): 0.23%\n",
+      "F1 (micro): 0.43%\n",
+      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "kf = KFold(n_splits=10)\n",
+    "for train_index, test_index in kf.split(train):\n",
+    "    accuracies = {}\n",
+    "\n",
+    "    x_train, x_test = train[train_index], train[test_index]\n",
+    "    y_train, y_test = target[train_index], target[test_index]\n",
+    "\n",
+    "    # Logistic Regression\n",
+    "    logreg = LogisticRegression(solver='sag', max_iter=100)\n",
+    "    logreg.fit(x_train, y_train)\n",
+    "\n",
+    "    Y_pred = logreg.predict(x_test)\n",
+    "    predictions = [round(value) for value in Y_pred]\n",
+    "\n",
+    "    # evaluate predictions\n",
+    "    accuracy = accuracy_score(y_test, predictions)\n",
+    "    accuracies['Logistic Regression'] = accuracy* 100.0\n",
+    "    print(\"Accuracy: %.2f%%\" % (accuracy * 100.0))\n",
+    "    print(\"F1 (macro): %.2f%%\" % f1_score(y_test, Y_pred, average='macro'))\n",
+    "    print(\"F1 (micro): %.2f%%\" % f1_score(y_test, Y_pred, average='micro'))\n",
+    "\n"
    ]
   }
  ]
