--- a/task7.ipynb
+++ b/task7.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "source": [
-    "We inistially try to clean the data to remove anything that might not provide any information regarding an authors personality. As a fist step, the whole string is put to lower case,to generalize them. Afterwards `nltk.word_tokenize` is used to generate tokens. These are then further filtered to only get alphanumeric tokens. As a next step, we remove all stopwords, since they should in theory not provide any meaning. Additionally we remove any word, which is less than 3 or more than 30 characters long. Afterwards we join all tokens to a string and separate them using a whitespace.\n",
+    "We initially try to clean the data to remove anything that might not provide any information regarding an authors personality. As a first step, the whole string is put to lower case,to generalize them. Afterwards `nltk.word_tokenize` is used to generate tokens. These are then further filtered to only get alphanumeric tokens. As a next step, we remove all stopwords, since they should in theory not provide any meaning. Additionally we remove any word, which is less than 3 or more than 30 characters long. Afterwards we join all tokens to a string and separate them using a whitespace.\n",
     "\n",
     "It was observed that including stopwords and removing the word limitation, $3 < len(word) < 30$, yielded slightly worse results.\n",
     "\n",
@@ -172,7 +172,7 @@
    "source": [
     "We can use `LabelEncoder` to create encodings for each MBTI type.\n",
     "\n",
-    "`CountVectorizer` then effectively creates a matrix of token counts over the whole vocabulary, as the text was already filterd before."
+    "`CountVectorizer` then effectively creates a matrix of token counts over the whole vocabulary, as the text was already filtered before."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -246,7 +246,7 @@
   },
   {
    "source": [
-    "Using 10-Fold cross validation, we can observer the following results:\n",
+    "Using 10-Fold cross validation, we can observe the following results:\n",
     "\n",
     "- Accuracy: 60.71%\n",
     "- F1-macro: 46.93%\n",
@@ -254,7 +254,7 @@
     "\n",
     "The results look very good overall if we take into account that there are 16 different MBTI types.\n",
     "\n",
-    "Though we have to keep in mind that the data set is not really balanced. We might get different result for a more balanced data set. The distribution is displayed below."
+    "Though we have to keep in mind that the data set is not really balanced. We might get different results for a more balanced data set. The distribution is displayed below."
    ],
    "cell_type": "markdown",
    "metadata": {}
