--- a/task8.ipynb
+++ b/task8.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -268,66 +268,26 @@
      "text": [
       "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\"The max_iter was reached which means \"\n",
-      "----------------------------------------------------------------\n",
-      "Accuracy: 0.5876%\n",
-      "F1-macro: 0.4230%\n",
-      "F1-micro: 0.5876%\n",
+      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
+      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\"The max_iter was reached which means \"\n",
       "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\"The max_iter was reached which means \"\n",
       "----------------------------------------------------------------\n",
-      "Accuracy: 0.5991%\n",
-      "F1-macro: 0.4286%\n",
-      "F1-micro: 0.5991%\n",
-      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\"The max_iter was reached which means \"\n",
-      "----------------------------------------------------------------\n",
-      "Accuracy: 0.5972%\n",
-      "F1-macro: 0.4404%\n",
-      "F1-micro: 0.5972%\n",
-      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\"The max_iter was reached which means \"\n",
-      "----------------------------------------------------------------\n",
-      "Accuracy: 0.6066%\n",
-      "F1-macro: 0.4470%\n",
-      "F1-micro: 0.6066%\n",
-      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\"The max_iter was reached which means \"\n",
-      "----------------------------------------------------------------\n",
-      "Accuracy: 0.6069%\n",
-      "F1-macro: 0.4581%\n",
-      "F1-micro: 0.6069%\n",
-      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\"The max_iter was reached which means \"\n",
-      "----------------------------------------------------------------\n",
-      "Accuracy: 0.6084%\n",
-      "F1-macro: 0.4621%\n",
-      "F1-micro: 0.6084%\n",
-      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\"The max_iter was reached which means \"\n",
-      "----------------------------------------------------------------\n",
-      "Accuracy: 0.6100%\n",
-      "F1-macro: 0.4700%\n",
-      "F1-micro: 0.6100%\n",
-      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\"The max_iter was reached which means \"\n",
-      "----------------------------------------------------------------\n",
-      "Accuracy: 0.6094%\n",
-      "F1-macro: 0.4652%\n",
-      "F1-micro: 0.6094%\n",
-      "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
-      "  warnings.warn(\"The max_iter was reached which means \"\n",
-      "----------------------------------------------------------------\n",
-      "Accuracy: 0.6091%\n",
-      "F1-macro: 0.4709%\n",
-      "F1-micro: 0.6091%\n",
-      "----------------------------------------------------------------\n",
-      "Accuracy: 0.6075%\n",
-      "F1-macro: 0.4719%\n",
-      "F1-micro: 0.6075%\n",
-      "----------------------------------------------------------------\n",
-      "Accuracy: 0.6075%\n",
-      "F1-macro: 0.4719%\n",
-      "F1-micro: 0.6075%\n",
+      "Accuracy: 0.6073%\n",
+      "F1-macro: 0.4720%\n",
+      "F1-micro: 0.6073%\n",
       "C:\\Users\\ldoet\\scoop\\apps\\python\\current\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:328: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
       "  warnings.warn(\"The max_iter was reached which means \"\n"
      ]
@@ -346,7 +306,7 @@
     "    y_train, y_test = target[train_index], target[test_index]\n",
     "\n",
     "    # Logistic Regression\n",
-    "    logreg = LogisticRegression(solver='saga', max_iter=100, C=100)\n",
+    "    logreg = LogisticRegression(solver='saga', max_iter=100)\n",
     "    logreg.fit(x_train, y_train)\n",
     "\n",
     "    y_pred = logreg.predict(x_test)\n",
@@ -356,24 +316,20 @@
     "    results['accuracies'].append(accuracy_score(y_test, predictions))\n",
     "    results['f1-macro'].append(f1_score(y_test, y_pred, average='macro'))\n",
     "    results['f1-micro'].append(f1_score(y_test, y_pred, average='micro'))\n",
-    "    print('----------------------------------------------------------------')\n",
-    "    print('Accuracy: %.4f%%' % (sum(float(a) for a in results['accuracies']) / float(len(results['accuracies']))))\n",
-    "    print('F1-macro: %.4f%%' % (sum(float(f) for f in results['f1-macro']) / float(len(results['f1-macro']))))\n",
-    "    print('F1-micro: %.4f%%' % (sum(float(f) for f in results['f1-micro']) / float(len(results['f1-micro']))))\n",
     "\n",
     "print('----------------------------------------------------------------')\n",
     "print('Accuracy: %.4f%%' % (sum(float(a) for a in results['accuracies']) / float(len(results['accuracies']))))\n",
     "print('F1-macro: %.4f%%' % (sum(float(f) for f in results['f1-macro']) / float(len(results['f1-macro']))))\n",
-    "print('F1-micro: %.4f%%' % (sum(float(f) for f in results['f1-micro']) / float(len(results['f1-micro']))))\n"
+    "print('F1-micro: %.4f%%' % (sum(float(f) for f in results['f1-micro']) / float(len(results['f1-micro']))))"
    ]
   },
   {
    "source": [
     "Using 10-Fold cross validation, we can observe the following results:\n",
     "\n",
-    "- Accuracy: 0.6075%\n",
-    "- F1-macro: 0.4719%\n",
-    "- F1-micro: 0.6075%\n",
+    "- Accuracy: 0.6073%\n",
+    "- F1-macro: 0.4720%\n",
+    "- F1-micro: 0.6073%\n",
     "\n",
     "The results look very good overall if we take into account that there are 16 different MBTI types.\n",
     "Compared to the previous task, we can only see a very small improvement in the F1-macro score when using word embedding."
